--- a/Artefact/WordleExercises.ipynb
+++ b/Artefact/WordleExercises.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,17 +239,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<Clue.GREEN: 1>, <Clue.GREEN: 1>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.YELLOW: 2>]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "def check_guess(word: Word, guess: Word) -> List[Clue]:\n",
@@ -295,17 +287,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Guess the wordle, you have 6 guesses remaining.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "class Game:\n",
@@ -383,17 +367,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "\n",
@@ -435,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,12 +459,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wordle has a \"Hard mode\" with the following definition: \"Any revealed hints must be used in subsequent guesses.\" This rule further constrains what strings a user can guess with. We will implement this using a method called 'hard_guess', based off the 'make_guess' method."
+    "Wordle has a \"Hard mode\" with the following definition: \"Any revealed hints must be used in subsequent guesses.\" This rule further constrains what strings a user can guess with. We will implement this using a method called 'hard_guess', which calls the 'make_guess' method when the constraints are met."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,11 +486,56 @@
     "    assert pattern_1.match(guess) and (pattern_2.match(guess) if len(included) > 0 else True), \"pre-hard_guess failed\"\n",
     "    #assert pattern_2.match(guess) if len(included) > 0 else True\n",
     "\n",
-    "\n",
+    "    self.make_guess(guess)\n",
     "    \n",
     "\n",
     "# Attach the hard_guess method to Game class\n",
     "Game.hard_guess = hard_guess"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gameplay\n",
+    "\n",
+    "Now that all of the fundamental gameplay mechanics have been implemented, we need to combine them all into one runnable game. There are two possible ways to do this, either with a CLI that tells the user to enter their guesses and output their clues, or with a GUI that allows the user to visually see the colours on their screen. I decided to go for a GUI using PyGame to challenge myself slightly further, as I have very little experience with it and enjoy trying new things."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pygame_menu'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpygame\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpygame_menu\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpygame_menu\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m themes\n\u001b[0;32m      5\u001b[0m pygame\u001b[38;5;241m.\u001b[39minit()\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pygame_menu'"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import pygame\n",
+    "\n",
+    "\n",
+    "pygame.init()\n",
+    "surface = pygame.display.set_mode((600,400))"
    ]
   },
   {
@@ -535,22 +556,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Guess the wordle, you have 6 guesses remaining.\n"
+      "Guess the wordle, you have 6 guesses remaining.\n",
+      "SLASH: ['S: GREEN', 'L: GREY', 'A: GREY', 'S: GREEN', 'H: GREY']\n",
+      "Guess the wordle, you have 5 guesses remaining.\n",
+      "SLASH: ['S: GREEN', 'L: GREY', 'A: GREY', 'S: GREEN', 'H: GREY']\n",
+      "SISSY: ['S: GREEN', 'I: GREEN', 'S: GREEN', 'S: GREEN', 'Y: GREEN']\n",
+      "You won! You took 2 guesses.\n",
+      "Guess the wordle, you have 6 guesses remaining.\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "Guess the wordle, you have 5 guesses remaining.\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "Guess the wordle, you have 4 guesses remaining.\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "Guess the wordle, you have 3 guesses remaining.\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "Guess the wordle, you have 2 guesses remaining.\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "Guess the wordle, you have 1 guesses remaining.\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+      "You lost! The answer was: STOUT.\n"
      ]
     }
    ],
    "source": [
-    "game = Game(\"SISSY\")\n",
-    "game.print_state()\n",
-    "game.make_guess(\"SLASH\")\n",
-    "game.hard_guess(\"SISSY\")"
+    "def test_game():\n",
+    "    game = Game(\"SISSY\")\n",
+    "    game.print_state() # 6 guesses remaining\n",
+    "    game.make_guess(\"SLASH\") # SLASH: ['S: GREEN', 'L: GREY', 'A: GREY', 'S: GREEN', 'H: GREY']\n",
+    "    game.print_state() # 5 guesses remaining\n",
+    "    game.hard_guess(\"SISSY\") #SISSY: ['S: GREEN', 'I: GREEN', 'S: GREEN', 'S: GREEN', 'Y: GREEN']\n",
+    "    game.print_state() # Word found, game ends\n",
+    "\n",
+    "    #game2 = Game(\"POTATO\") # Error, word too long\n",
+    "\n",
+    "    game3 = Game(\"STOUT\")\n",
+    "    game3.print_state() # 6 guesses remaining\n",
+    "    game3.make_guess(\"FRAME\") # FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+    "    game3.print_state() # 5 guesses remaining\n",
+    "    game3.make_guess(\"FRAME\") # FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+    "    game3.print_state() # 4 guesses remaining\n",
+    "    game3.make_guess(\"FRAME\") # FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+    "    game3.print_state() # 3 guesses remaining\n",
+    "    game3.make_guess(\"FRAME\") # FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+    "    game3.print_state() # 2 guesses remaining\n",
+    "    game3.make_guess(\"FRAME\") # FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+    "    game3.print_state() # 1 guesses remaining\n",
+    "    game3.make_guess(\"FRAME\") # FRAME: ['F: GREY', 'R: GREY', 'A: GREY', 'M: GREY', 'E: GREY']\n",
+    "    game3.print_state() # 0 guesses remaining, game lost\n",
+    "\n",
+    "test_game()"
    ]
   },
   {
@@ -562,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -574,11 +650,15 @@
     }
    ],
    "source": [
-    "g1 = Guess(\"HELLO\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN, Clue.YELLOW]) # Successful Guess object creation\n",
-    "print(g1) # HELLO: ['H: YELLOW', 'E: YELLOW', 'L: GREY', 'L: GREEN', 'O: YELLOW'] (using __repr__)\n",
+    "def test_guess():\n",
+    "    g1 = Guess(\"HELLO\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN, Clue.YELLOW]) # Successful Guess object creation\n",
+    "    \n",
+    "    #g2 = Guess(\"HELL\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN, Clue.YELLOW]) # Assertion Error\n",
+    "    #g3 = Guess(\"HELLO\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN]) # Assertion Error\n",
+    "    \n",
+    "    return g1\n",
     "\n",
-    "#g2 = Guess(\"HELL\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN, Clue.YELLOW]) # Assertion Error\n",
-    "#g3 = Guess(\"HELLO\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN]) # Assertion Error"
+    "print(test_guess()) # HELLO: ['H: YELLOW', 'E: YELLOW', 'L: GREY', 'L: GREEN', 'O: YELLOW'] (using __repr__)"
    ]
   },
   {
@@ -604,9 +684,10 @@
     }
    ],
    "source": [
-    "print(check_letter(\"S\", 0, \"STOUT\")) #Clue.GREEN\n",
-    "print(check_letter(\"S\", 3, \"STOUT\")) #Clue.YELLOW\n",
-    "print(check_letter(\"Z\", 0, \"STOUT\")) #Clue.GREY"
+    "def test_check_letter():\n",
+    "    print(check_letter(\"S\", 0, \"STOUT\")) #Clue.GREEN\n",
+    "    print(check_letter(\"S\", 3, \"STOUT\")) #Clue.YELLOW\n",
+    "    print(check_letter(\"Z\", 0, \"STOUT\")) #Clue.GREY"
    ]
   },
   {
@@ -618,20 +699,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Y\n"
+      "T\n",
+      "O\n"
      ]
     }
    ],
    "source": [
-    "    \n",
-    "print(hint(game.guesses, game.answer))"
+    "def test_hint():\n",
+    "    game = Game(\"STOUT\")\n",
+    "    print(hint(game.guesses, game.answer)) # Any of the 5 letters at random\n",
+    "    game.make_guess(\"START\") # S, T, T green\n",
+    "    print(hint(game.guesses, game.answer)) # Only O or U at random\n",
+    "\n",
+    "test_hint()"
    ]
   }
  ],
