I don't think message is needed anymore

--- a/Artefact/WordleExercises.ipynb
+++ b/Artefact/WordleExercises.ipynb
@@ -652,37 +652,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Messages\n",
-    "\n",
-    "We need a way to communicate with the player whenever they make an invalid move, win the game or reveal the answer when they lose. We will create a method that accepts a string (the message) and a position on the game for the message to be displayed, and display it when called."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 211,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def message(text: str, dimensions: tuple):\n",
-    "    message_rect = pygame.Rect(dimensions)\n",
-    "    message_col = WHITE # customisation in future update (?)\n",
-    "    \n",
-    "    message_font = pygame.font.Font(None, round((dimensions[2]**2 + dimensions[3]**2)**(1/2)))\n",
-    "    \n",
-    "    text_surface = message_font.render(text, True, BLACK)\n",
-    "    text_rect = text_surface.get_rect(center=message_rect.center)\n",
-    "\n",
-    "    pygame.draw.rect(SCREEN, message_col, message_rect)\n",
-    "    SCREEN.blit(text_surface, text_rect)\n",
-    "    \n",
-    "    pygame.display.flip()\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Gameplay\n",
     "\n",
     "We need the game to wait for user inputs, then display them on the screen as they type. The game will wait for an event, or a user input until it receives one, then depending on the input with act accordingly. If the user inputs a backspace, assuming they're currently typing a word, it will remove the most recently input letter. Otherwise it will do nothing. As long as the user has not entered too many letters for the current word, entering a character key will add that letter to the word. Pressing the enter key when the word is full will submit the current options as a guess."
@@ -708,6 +677,17 @@
      "text": [
       "C:\\Users\\sakir\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
       "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
