--- a/Artefact/WordleExercises.ipynb
+++ b/Artefact/WordleExercises.ipynb
@@ -798,6 +798,7 @@
     "                            word_to_guess = \"\"\n",
     "                            letters = []\n",
     "\n",
+    "                            # make sure this works as intended (stopping point), also work on \"keyboard\"\n",
     "                            if game.gstate != Gamestate.PLAYING:\n",
     "                                Tk().wm_withdraw() #to hide the main window\n",
     "                                messagebox.showinfo(\"Game Over!\",game.print_state())\n",
