--- a/Artefact/WordleExercises.ipynb
+++ b/Artefact/WordleExercises.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,17 +662,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "re.compile('^[A-Z][A-Z][A-Z][A-Z][A-Z]$')\n",
-      "re.compile('T')\n",
-      "re.compile('^[A-Z][A-Z][A-Z][A-Z][A-Z]$')\n",
-      "re.compile('TR')\n"
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
      ]
     }
    ],
