Artefact Done! (I think!)

--- a/Artefact/WordleExercises.ipynb
+++ b/Artefact/WordleExercises.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,14 +385,18 @@
     "    # array of all letter indices\n",
     "    grey = list(range(0, WORD_LENGTH))\n",
     "\n",
-    "    for i in guesses:\n",
-    "        for j in range(0, WORD_LENGTH):\n",
-    "            if i.clues[j] == Clue.GREEN or i.clues[j] == Clue.YELLOW:\n",
-    "                # remove indices with a yellow or green clue already\n",
-    "                grey.remove(j)\n",
+    "    assert len(guesses) > 0, \"no guesses made yet\"\n",
+    "    \n",
+    "    for j in range(0, WORD_LENGTH):\n",
+    "        if guesses[-1].clues[j] == Clue.GREEN:\n",
+    "            # remove indices with a green clue already\n",
+    "            grey.remove(j)\n",
+    "        elif guesses[-1].clues[j] == Clue.YELLOW:\n",
+    "            # removes indices with a yellow clue already\n",
+    "            grey.remove(answer.index(guesses[-1].word[j]))\n",
     "    \n",
     "    # set hint to a random currently grey letter\n",
-    "    hint = answer[random.choice(grey)]\n",
+    "    hint = answer[random.choice(grey) if grey else '*']\n",
     "\n",
     "    assert re.match('^[A-Z]$', hint)\n",
     "\n",
@@ -410,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1344,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,19 +537,20 @@
     "SCREEN = pygame.display.set_mode((WIDTH, HEIGHT))\n",
     "CLOCK = pygame.time.Clock()\n",
     "\n",
-    "GREEN = \"#00FF00\"\n",
+    "GREEN = \"#009900\"\n",
     "YELLOW = \"#FFFF00\"\n",
-    "GREY = \"#ADADAD\"\n",
+    "GREY = \"#555555\"\n",
     "BLACK = \"#000000\"\n",
     "WHITE = \"#FFFFFF\"\n",
+    "LIGHT_GREY = \"#ADADAD\"\n",
+    "COLOR_PRIO = [GREEN, YELLOW, GREY, LIGHT_GREY]\n",
     "\n",
     "OUTLINE_WIDTH = 5\n",
     "SPACE = 200\n",
     "\n",
-    "BOX_SIZE = (round((WIDTH - SPACE - WORD_LENGTH * OUTLINE_WIDTH * 2)/WORD_LENGTH),\n",
-    "            round((HEIGHT - SPACE - MAX_GUESSES * OUTLINE_WIDTH * 2)/MAX_GUESSES))\n",
+    "BOX_SIZE = ((WIDTH - SPACE - WORD_LENGTH * OUTLINE_WIDTH * 2)//WORD_LENGTH,\n",
+    "            (HEIGHT - SPACE - MAX_GUESSES * OUTLINE_WIDTH * 2)//MAX_GUESSES)\n",
     "\n",
-    "BASH_FILE = 'focus.sh'\n",
     "\n",
     "pygame.display.set_caption(\"Wordle!\")\n",
     "\n",
@@ -563,19 +568,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1345,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Letter:\n",
     "    \n",
     "    # take the letter and its position on the screen and define all variables\n",
-    "    def __init__(self, letter, pos, clue = Clue.GREY):\n",
+    "    def __init__(self, letter, pos, clue = Clue.GREY, box_size = BOX_SIZE):\n",
     "\n",
     "        # pre-conditions\n",
     "        assert re.match(\"^[A-Z]$\", letter) and \\\n",
     "            len(pos) == 2 and \\\n",
-    "            OUTLINE_WIDTH <= pos[0] <= WIDTH - OUTLINE_WIDTH and \\\n",
+    "            OUTLINE_WIDTH - SPACE // 2 <= pos[0] <= WIDTH - OUTLINE_WIDTH and \\\n",
     "            OUTLINE_WIDTH <= pos[1] <= HEIGHT - OUTLINE_WIDTH, \"pre-Letter failed\"\n",
     "        \n",
     "        self.letter = letter\n",
@@ -585,11 +590,12 @@
     "        self.pos = pos\n",
     "        self.x_pos = pos[0] + SPACE // 2\n",
     "        self.y_pos = pos[1]\n",
+    "        self.box_size = box_size\n",
     "\n",
-    "        self.font = pygame.font.Font(None, round((BOX_SIZE[0]**2 + BOX_SIZE[1]**2)**(1/2)))\n",
+    "        self.font = pygame.font.Font(None, round((self.box_size[0]**2 + box_size[1]**2)**(1/2)))\n",
     "        self.letter_surface = self.font.render(self.letter, True, self.letter_col)\n",
-    "        self.letter_rect = self.letter_surface.get_rect(center=(self.x_pos + (BOX_SIZE[0] - OUTLINE_WIDTH) // 2,\n",
-    "                                                                self.y_pos + BOX_SIZE[1] // 2))\n",
+    "        self.letter_rect = self.letter_surface.get_rect(center=(self.x_pos + (self.box_size[0] - OUTLINE_WIDTH) // 2,\n",
+    "                                                                self.y_pos + self.box_size[1] // 2))\n",
     "\n",
     "        self.outline_rect = self.letter_surface.get_rect \n",
     "        \n",
@@ -603,12 +609,12 @@
     "    def draw(self, guess: bool = False):\n",
     "        pygame.draw.rect(SCREEN, BLACK, (self.x_pos - OUTLINE_WIDTH,\n",
     "                                         self.y_pos - OUTLINE_WIDTH,\n",
-    "                                         BOX_SIZE[0] + OUTLINE_WIDTH,\n",
-    "                                         BOX_SIZE[1] + OUTLINE_WIDTH))\n",
+    "                                         self.box_size[0] + OUTLINE_WIDTH,\n",
+    "                                         self.box_size[1] + OUTLINE_WIDTH))\n",
     "        pygame.draw.rect(SCREEN, self.clue if guess else WHITE, (self.x_pos,\n",
     "                                         self.y_pos,\n",
-    "                                         BOX_SIZE[0] - OUTLINE_WIDTH,\n",
-    "                                         BOX_SIZE[1] - OUTLINE_WIDTH))\n",
+    "                                         self.box_size[0] - OUTLINE_WIDTH,\n",
+    "                                         self.box_size[1] - OUTLINE_WIDTH))\n",
     "        \n",
     "        SCREEN.blit(self.letter_surface, self.letter_rect)\n",
     "        pygame.display.flip()\n",
@@ -616,8 +622,8 @@
     "    def delete(self):\n",
     "        pygame.draw.rect(SCREEN, WHITE, (self.x_pos,\n",
     "                                         self.y_pos,\n",
-    "                                         BOX_SIZE[0] - OUTLINE_WIDTH,\n",
-    "                                         BOX_SIZE[1] - OUTLINE_WIDTH))\n",
+    "                                         self.box_size[0] - OUTLINE_WIDTH,\n",
+    "                                         self.box_size[1] - OUTLINE_WIDTH))\n",
     "        pygame.display.flip()"
    ]
   },
@@ -632,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1346,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,6 +661,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Hint Button\n",
+    "\n",
+    "We also need a button that can be clicked by the player to give them the hint we made in the code above. This will be similar to the hard mode button but it will also display the hint below it when clicked (I combined these two methods together)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1347,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hint_button(clicked: bool = False, hint = None):\n",
+    "    if not clicked:\n",
+    "        y_pos = 10\n",
+    "        col = LIGHT_GREY\n",
+    "        text = \"Hint\"\n",
+    "    else:\n",
+    "        y_pos = 40\n",
+    "        col = YELLOW\n",
+    "        text = hint\n",
+    "\n",
+    "    button_rect = pygame.Rect(WIDTH - 60, y_pos, 50, 30)\n",
+    "    button_col = col\n",
+    "    button_text = text\n",
+    "    button_font = pygame.font.Font(None, 20)\n",
+    "\n",
+    "    text_surface = button_font.render(button_text, True, BLACK)\n",
+    "    text_rect = text_surface.get_rect(center=button_rect.center)\n",
+    "\n",
+    "    pygame.draw.rect(SCREEN, button_col, button_rect)\n",
+    "    SCREEN.blit(text_surface, text_rect)\n",
+    "\n",
+    "    return button_rect"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \"Keyboard\"\n",
+    "\n",
+    "To improve user experience, we need a \"keyboard\" on the screen so that the player knows the overall current state of every letter; whether they have tried it or not. We will store the values in an array and refresh the keys every time the user makes a guess."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1348,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# create keyboard array for positioning on ui\n",
+    "keyboard = [\"QWERTYUIOP\", \"ASDFGHJKL\", \"ZXCVBNM\"]\n",
+    "\n",
+    "# Letter objects for the keyboard\n",
+    "keys = []\n",
+    "\n",
+    "# index tracker to interact with correct Letter objects\n",
+    "keys_index = []\n",
+    "\n",
+    "def reset_keyboard():\n",
+    "    # make Letter objects for each letter and set them to dark grey (unused)\n",
+    "    for i in range(len(keyboard)):\n",
+    "        for j in range(len(keyboard[i])):\n",
+    "            # some maths to make it fit nicely\n",
+    "            keys.append(Letter(keyboard[i][j], (j*(BOX_SIZE[0]//1.5+2*OUTLINE_WIDTH)+OUTLINE_WIDTH+(WORD_LENGTH*(BOX_SIZE[0]+2*OUTLINE_WIDTH)\n",
+    "                                                                                    - (BOX_SIZE[0]//1.5+2*OUTLINE_WIDTH)*len(keyboard[i]))//2,\n",
+    "                                                i*(BOX_SIZE[1]//1.5+2*OUTLINE_WIDTH)+MAX_GUESSES*BOX_SIZE[1]+2*OUTLINE_WIDTH*MAX_GUESSES+\n",
+    "                                                OUTLINE_WIDTH),\n",
+    "                                                LIGHT_GREY,\n",
+    "                                                (BOX_SIZE[0]//1.5,BOX_SIZE[1]//1.5)))\n",
+    "            keys_index.append(keyboard[i][j])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Gameplay\n",
     "\n",
     "We need the game to wait for user inputs, then display them on the screen as they type. The game will wait for an event, or a user input until it receives one, then depending on the input with act accordingly. If the user inputs a backspace, assuming they're currently typing a word, it will remove the most recently input letter. Otherwise it will do nothing. As long as the user has not entered too many letters for the current word, entering a character key will add that letter to the word. Pressing the enter key when the word is full will submit the current options as a guess."
@@ -662,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1349,
    "metadata": {},
    "outputs": [
     {
@@ -672,6 +756,14 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sakir\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -690,10 +782,14 @@
     "\n",
     "    # start the actual wordle game\n",
     "    game = Game()\n",
-    "\n",
+    "    \n",
+    "    # reset keyboard\n",
+    "    reset_keyboard()\n",
+    "    \n",
     "    # create initial grid\n",
     "    for y in range(MAX_GUESSES):\n",
     "        for x in range(WORD_LENGTH):\n",
+    "            # borders\n",
     "            pygame.draw.rect(SCREEN, BLACK, (x*(BOX_SIZE[0] + 2 * OUTLINE_WIDTH) + SPACE // 2,\n",
     "                                            y*(BOX_SIZE[1] + 2 * OUTLINE_WIDTH),\n",
     "                                            BOX_SIZE[0] + OUTLINE_WIDTH,\n",
@@ -703,13 +799,18 @@
     "                                            BOX_SIZE[0] - OUTLINE_WIDTH,\n",
     "                                            BOX_SIZE[1] - OUTLINE_WIDTH))\n",
     "\n",
-    "    # add hard mode button initially set to easy mode\n",
+    "    # add keyboard to screen\n",
+    "    for key in keys:\n",
+    "        key.draw(True)\n",
+    "\n",
+    "    # add hard mode button initially set to easy mode and hint button\n",
     "    button = hard_mode_button(False)\n",
+    "    hint_pressed = hint_button()\n",
     "\n",
     "    while True:\n",
     "        \n",
     "        for event in pygame.event.get():\n",
-    "            # pygame.QUIT event means the user clicked X to close your window\n",
+    "            # pygame.QUIT event means the user clicked X to close their window\n",
     "            if event.type == pygame.QUIT:\n",
     "                pygame.quit()\n",
     "                sys.exit()\n",
@@ -744,6 +845,15 @@
     "                            for i, clue in enumerate(game.guesses[-1].clues):\n",
     "                                letters[i].clue = GREEN if clue == Clue.GREEN else YELLOW if clue == Clue.YELLOW else GREY\n",
     "                                letters[i].draw(True)\n",
+    "                                # update keyboard colours\n",
+    "\n",
+    "                                index = keys_index.index(letters[i].letter)\n",
+    "\n",
+    "                                # do not overwrite repeated letters\n",
+    "                                if COLOR_PRIO.index(letters[i].clue) < COLOR_PRIO.index(keys[index].clue):\n",
+    "                                    keys[index].clue = letters[i].clue\n",
+    "                                    keys[index].draw(True)\n",
+    "\n",
     "                                pygame.display.flip()\n",
     "\n",
     "\n",
@@ -783,6 +893,14 @@
     "                if event.button == 1: # left mouse click\n",
     "                    if button[0].collidepoint(event.pos): # if hard mode button pressed\n",
     "                        button = hard_mode_button(not button[1])\n",
+    "                    elif hint_pressed.collidepoint(event.pos): # if hint button pressed\n",
+    "                        hint_result = hint(game.guesses, game.answer)\n",
+    "                        hint_button(True, hint_result)\n",
+    "\n",
+    "                        # add the hint result to the visible keyboard\n",
+    "                        keys[keys_index.index(hint_result)].clue = YELLOW\n",
+    "                        keys[keys_index.index(hint_result)].draw(True)\n",
+    "                        pygame.display.flip()\n",
     "\n",
     "        # flip() the display to put your work on screen\n",
     "        pygame.display.flip()\n",
