quick hint fixes and adding the report beginning

--- a/Artefact/WordleExercises.ipynb
+++ b/Artefact/WordleExercises.ipynb
@@ -380,12 +380,10 @@
     "    # pre-condition\n",
     "    assert re.match('^[A-Z]{%d}$' % WORD_LENGTH, answer) and \\\n",
     "        answer in WORDS and \\\n",
-    "        len(guesses) < MAX_GUESSES, \"pre-hint failed.\"\n",
+    "        0 < len(guesses) < MAX_GUESSES, \"pre-hint failed.\"\n",
     "    \n",
     "    # array of all letter indices\n",
     "    grey = list(range(0, WORD_LENGTH))\n",
-    "\n",
-    "    assert len(guesses) > 0, \"no guesses made yet\"\n",
     "    \n",
     "    for j in range(0, WORD_LENGTH):\n",
     "        if guesses[-1].clues[j] == Clue.GREEN:\n",
@@ -393,12 +391,14 @@
     "            grey.remove(j)\n",
     "        elif guesses[-1].clues[j] == Clue.YELLOW:\n",
     "            # removes indices with a yellow clue already\n",
-    "            grey.remove(answer.index(guesses[-1].word[j]))\n",
-    "    \n",
+    "            index = answer.index(guesses[-1].word[j])\n",
+    "            grey.remove(index)\n",
+    "            answer = answer[:index] + '*' + answer[index + 1:]\n",
+    "\n",
     "    # set hint to a random currently grey letter\n",
     "    hint = answer[random.choice(grey) if grey else '*']\n",
     "\n",
-    "    assert re.match('^[A-Z]$', hint)\n",
+    "    assert re.match('^[A-Z]$', hint), \"all letters found\"\n",
     "\n",
     "    return hint\n"
    ]
