report done! project finished :)

--- a/Artefact/WordleExercises.ipynb
+++ b/Artefact/WordleExercises.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1350,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1351,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# constants\n",
-    "WORD_LENGTH = 5 \n",
-    "MAX_GUESSES = 6\n",
+    "WORD_LENGTH = 5\n",
+    "MAX_GUESSES = 5\n",
     "\n",
     "# define Word as an alias for string\n",
     "Word = str\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1352,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1353,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1354,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1355,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1356,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1357,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1358,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,10 +501,9 @@
     "    assert not included\n",
     "\n",
     "    self.make_guess(guess)\n",
-    "    \n",
     "\n",
     "# Attach the hard_guess method to Game class\n",
-    "Game.hard_guess = hard_guess"
+    "Game.hard_guess = hard_guess\n"
    ]
   },
   {
@@ -521,9 +520,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1359,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.5.2 (SDL 2.28.3, Python 3.12.2)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "# https://www.pygame.org/docs/\n",
     "import pygame\n",
@@ -552,6 +560,7 @@
     "            (HEIGHT - SPACE - MAX_GUESSES * OUTLINE_WIDTH * 2)//MAX_GUESSES)\n",
     "\n",
     "\n",
+    "\n",
     "pygame.display.set_caption(\"Wordle!\")\n",
     "\n",
     "guess: Word"
@@ -568,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1360,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1361,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1362,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1363,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1364,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -756,6 +765,14 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sakir\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -889,10 +906,11 @@
     "                        hint_result = hint(game.guesses, game.answer)\n",
     "                        hint_button(True, hint_result)\n",
     "\n",
-    "                        # add the hint result to the visible keyboard\n",
-    "                        keys[keys_index.index(hint_result)].clue = YELLOW\n",
-    "                        keys[keys_index.index(hint_result)].draw(True)\n",
-    "                        pygame.display.flip()\n",
+    "                        # add the hint result to the visible keyboard and not already green\n",
+    "                        if keys[keys_index.index(hint_result)].clue != GREEN:\n",
+    "                            keys[keys_index.index(hint_result)].clue = YELLOW\n",
+    "                            keys[keys_index.index(hint_result)].draw(True)\n",
+    "                            pygame.display.flip()\n",
     "\n",
     "        # flip() the display to put your work on screen\n",
     "        pygame.display.flip()\n",
@@ -999,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
